WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229997
[css-position-sticky] Sticky constraints are calculated incorrectly when scrolling container has padding and borders
https://bugs.webkit.org/show_bug.cgi?id=229997
Summary
[css-position-sticky] Sticky constraints are calculated incorrectly when scro...
Martin Robinson
Reported
2021-09-07 04:53:19 PDT
imported/w3c/web-platform-tests/css/css-position/sticky/position-sticky-large-top-2.tentative.html and imported/w3c/web-platform-tests/css/css-position/sticky/position-sticky-large-top.tentative.html are failing which test the situation where the scrolling container has padding and border and the "top" property on the sticky item pushes it beyond the original boundaries of the content rect.
Attachments
Patch
(7.31 KB, patch)
2021-09-07 07:42 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Patch
(11.97 KB, patch)
2021-09-08 01:42 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2021-09-07 07:42:55 PDT
Created
attachment 437501
[details]
Patch
EWS Watchlist
Comment 2
2021-09-07 07:44:00 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Martin Robinson
Comment 3
2021-09-08 01:42:31 PDT
Created
attachment 437612
[details]
Patch
EWS
Comment 4
2021-09-08 04:48:32 PDT
Committed
r282138
(
241435@main
): <
https://commits.webkit.org/241435@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437612
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-09-08 04:49:17 PDT
<
rdar://problem/82867377
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug